# fdaa-cli

./: .gitignore  README.md  pyproject.toml
api/: index.py  requirements.txt
c-suite/ada/: IDENTITY.md  MEMORY.md  SOUL.md
c-suite/grace/: IDENTITY.md  MEMORY.md  SOUL.md
c-suite/tony/: IDENTITY.md  MEMORY.md  SOUL.md  TOOLS.md
c-suite/val/: CONTEXT.md  IDENTITY.md  MEMORY.md  SOUL.md
fdaa/: cli.py  database.py  gateway_service.py  registry_client.py  server.py
fdaa/mcp/: gateway.py
fdaa/telemetry/: __init__.py  tracer.py
systemd/: fdaa-gateway.service
test-agent/: CONTEXT.md  IDENTITY.md  MEMORY.md  SOUL.md
